added support for sending emails
